--- a/src/app/views/agent/agent-tags/agent-tags.component.html
+++ b/src/app/views/agent/agent-tags/agent-tags.component.html
@@ -37,7 +37,7 @@
     </div>
   </div>
 
-  <div class="serach-emp " *ngIf="!hideNoDataDiv">
+  <div class="serach-emp  no-data-margin-top" *ngIf="!hideNoDataDiv" >
     <h2><em>It is Empty Here!</em></h2>
     <p><em>{{errorMsg}}</em></p>
   </div>
