--- a/src/app/views/agent/selected-tag-agents/selected-tag-agents.component.html
+++ b/src/app/views/agent/selected-tag-agents/selected-tag-agents.component.html
@@ -10,7 +10,7 @@
     </div>
     <app-entity-name-header [entityModel]="entityModel"></app-entity-name-header>
   </div>
-  <div class="container app-bg2 bottom-wrapper-for-back">
+  <div class="container app-bg2 bottom-wrapper-for-back" *ngIf="hideNoDataDiv">
     <div class="row">
       <div class="col-xs-12 tagsContent">
         <h4>Entities associated with this tag are following</h4>
@@ -40,5 +40,9 @@
         <div class="loadMore"><a (click)="onLoadMoreClick()" alt="Load More">Load More</a></div>
       </div>
     </div>
+  </div>
+  <div class="serach-emp  no-data-margin-top" *ngIf="!hideNoDataDiv">
+    <h2><em>It is Empty Here!</em></h2>
+    <p><em>{{errorMsg}}</em></p>
   </div>
 </div>
