working on recent objectives

--- a/src/app/views/agent/agent-objective/agent-objective.component.html
+++ b/src/app/views/agent/agent-objective/agent-objective.component.html
@@ -11,8 +11,8 @@
   </div>
   <div class="container app-bg2 bottom-wrapper-for-back">
     <ul class="nav nav-tabs mr-25 ml-25">
-      <li class="active"><a data-toggle="tab" href="#tab1">Agent Objective</a></li>
-      <li><a data-toggle="tab" href="#tab2">Our Objective</a></li>
+      <li class="active"><a data-toggle="tab" href="#tab1" (click)="onTabClick(1)" >Agent Objective</a></li>
+      <li><a data-toggle="tab" href="#tab2" (click)="onTabClick(2)">Our Objective</a></li>
     </ul>
 
     <div class="row">
