--- a/src/app/views/agent/agent-associates/agent-associates.component.html
+++ b/src/app/views/agent/agent-associates/agent-associates.component.html
@@ -30,7 +30,7 @@
               <span class="date">{{item.effectiveDate | slice:0:10}}</span>
               <div class="clearfix"></div>
               <div class="row">
-                <div class="col-md-12 col-xs-12" *ngIf="entityModel.type == P">
+                <div class="col-md-12 col-xs-12" *ngIf="entityModel.type == 'P'">
                   <div class="associatAgentName"><img src="../../../../images/baseline-business-24px.svg" alt="" />
                     <span>{{item.agentname}}</span></div>
                 </div>
