Few Fixes in the application

--- a/src/app/views/agent/agent-tags/agent-tags.component.html
+++ b/src/app/views/agent/agent-tags/agent-tags.component.html
@@ -81,6 +81,10 @@
 
 
   </div>
+  <div class="serach-emp " *ngIf="!hideNoDataDiv">
+    <h2><em>It is Empty Here!</em></h2>
+    <p><em>{{errorMsg}}</em></p>
+  </div>
 </div>
 
 
