--- a/src/app/customUI/dialogs/edit-and-delete-tag-popup/edit-and-delete-tag-popup.component.html
+++ b/src/app/customUI/dialogs/edit-and-delete-tag-popup/edit-and-delete-tag-popup.component.html
@@ -4,9 +4,9 @@
 
         <!-- Modal content-->
           <div class="modal-header">
-            <h4 class="modal-title">Edit Tag</h4>
             <button type="submit"  class="btn btn-default delete-btn" data-dismiss="modal" (click) = "deleteTag()">Delete Tag <img
-              src="images/delete-icon-large.svg" alt=""></button> 
+              src="images/delete-icon-large.svg"></button> 
+            <h4 class="modal-title">Edit Tag</h4>
           </div>
           <form role="form">
             <div class="modal-body">
