--- a/src/app/customUI/dialogs/edit-and-delete-tag-popup/edit-and-delete-tag-popup.component.html
+++ b/src/app/customUI/dialogs/edit-and-delete-tag-popup/edit-and-delete-tag-popup.component.html
@@ -5,7 +5,7 @@
         <!-- Modal content-->
           <div class="modal-header">
             <button type="submit"  class="btn btn-default delete-btn" data-dismiss="modal" (click) = "deleteTag()">Delete Tag <img
-              src="images/delete-icon-large.svg"></button> 
+              src="images/delete-icon-large.svg"  style="margin-top: -10px"></button> 
             <h4 class="modal-title">Edit Tag</h4>
           </div>
           <form role="form">
