--- a/src/app/views/dashboard/search/search.component.html
+++ b/src/app/views/dashboard/search/search.component.html
@@ -6,7 +6,7 @@
           <div class="form-group">
             <input type="text" class="form-control" formControlName="search" placeholder="Searching in All">
           </div>
-          <button type="submit" class="btn btn-default search-btn"></button>
+          <button type="submit" class="btn btn-default search-btn" id="searchButton"></button>
         </div>
       </form>
     </div>
